src/objects/Account/fields/IsActi__c.field-meta.xml
<CustomField>
    <fullName>IsActi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>