src/objects/Account/fields/Net_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Net_Ammount__c</fullName>
    <formula>AnnualRevenue  -  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>