src/objects/Account/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>IF( AND( ISPICKVAL( Rating , &apos;Cold&apos;) , Amount__c = 50000) , 10, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>