src/objects/Account/validationRules/Annual_revenue_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_revenue_should_be_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue  &lt; 0</errorConditionFormula>
    <errorMessage>revenue should be greaterthan zero</errorMessage>
</ValidationRule>