src/objects/Account/validationRules/billing_province_must_have_value.validationRule-meta.xml
<ValidationRule>
    <fullName>billing_province_must_have_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(BillingState), OR(BillingCountry = &quot;United States&quot;,BillingCountry = &quot;Canada&quot;))</errorConditionFormula>
    <errorMessage>Account records must have a Billing
State/Province value if the Billing Country is  United States or
Canada.</errorMessage>
</ValidationRule>